--- a/style.css
+++ b/style.css
@@ -340,7 +340,7 @@ ul.slick-dots li button {
 ul.slick-dots li.slick-active button {
     width: 90px;
     height: 6px;
-    background: #023047;
+    background: #FDA50F;
 } 
 
 
