--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ h2.title span {
 .test-info span {
     color: #023047;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 /* lets style with slider  */
@@ -331,7 +331,7 @@ ul.slick-dots li button {
     width: 16px;
     height: 6px;
     border: none;
-    background: #219ebc;
+    background:  #ff3400;
     border-radius: 5px;
     transition: .6s ease-in-out;
 }
@@ -371,7 +371,7 @@ ul.slick-dots li.slick-active button {
 }
 
 .slick-next:hover , .slick-prev:hover {
-    background-color: #219ebc;
+    background-color: #ff3400;
 }
 /* <!-- Included with every bike rental: --> */
 .small_baner{
@@ -404,11 +404,12 @@ margin-top: 30px;
     background-color: #ddfcf5;
 }
 .announcement_head{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
     text-align: center;
-    line-height: 1;
+    line-height: 1.2;
     padding-bottom: 15px;
+  
 }
 .announcement_head_2{
     padding-top: 80px;
@@ -423,7 +424,7 @@ margin-top: 30px;
     font-size: 12px;
 }
 .POWERED{
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
     font-weight: 600;
     margin: 30px;
@@ -488,6 +489,7 @@ padding: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 37px;
 }
 
 .icon_cpntainer i {
